# LittleSLAM

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  run.sh
cui/: CMakeLists.txt  FrameworkCustomizer.cpp  FrameworkCustomizer.h  MapDrawer.cpp  MapDrawer.h  SlamLauncher.cpp  main.cpp
doc/: customize.md  install-linux.md  install-win.md
framework/: CMakeLists.txt  CovarianceCalculator.cpp  CovarianceCalculator.h  DataAssociator.h  LoopDetector.h  MyUtil.h  NNFinder2D.cpp  NNFinder2D.h  NNGridTable.cpp  NNGridTable.h  P2oDriver2D.cpp  PointCloudMap.h  Pose2D.cpp  PoseEstimatorICP.cpp  PoseEstimatorICP.h  PoseFuser.h  PoseGraph.cpp  PoseGraph.h  PoseOptimizer.h  RobustP2oDriver2D.cpp  RobustP2oDriver2D.h  ScanMatcher2D.cpp  ScanMatcher2D.h  ScanMatcherRB.cpp  ScanMatcherRB.h  ScanPointAnalyser.cpp  ScanPointResampler.cpp  SensorDataReader.cpp  SlamBackEnd.cpp  SlamFrontEnd.cpp  SlamFrontEnd.h
hook/: CMakeLists.txt  DataAssociatorLS.cpp  DataAssociatorNN.cpp  DataAssociatorNN.h  LoopDetectorSS.cpp  LoopDetectorSS.h  PointCloudMapBS.cpp  PointCloudMapGT.cpp  PointCloudMapGT.h  PointCloudMapLP.cpp  PointCloudMapLP.h  PoseOptimizerGN.cpp  PoseOptimizerGN.h  PoseOptimizerMAP.cpp  PoseOptimizerMAP.h  PoseOptimizerSD.cpp  PoseOptimizerSL.cpp
playground/pluto/: naive_odometry.jl  study_corridor.jl
